@startuml ERD

!define primary_key(x) x
!define foreign_key(x) x
!define column(x) x
!define table(x) entity x

hide circle
skinparam monochrome true
skinparam shadowing false
skinparam linetype ortho
skinparam nodesep 60
skinparam ranksep 80

title ERD - Learning Management System (LeMas)

table(Role) {
  primary_key(id) : Int
  --
  column(nama) : String
}

table(User) {
  primary_key(nomorInduk) : String
  --
  column(nama) : String
  column(email) : String
  column(password) : String
  column(telepon) : String
  column(fotoUrl) : String
  foreign_key(roleId) : Int
}

table(Mahasiswa) {
  primary_key(nim) : String
  --
  foreign_key(nomorInduk) : String
}

table(Dosen) {
  primary_key(nip) : String
  --
  foreign_key(nomorInduk) : String
  column(nidn) : String
  column(bidang) : String
  column(ruangKantor) : String
}

table(MataKuliah) {
  primary_key(idMataKuliah) : Int
  --
  column(namaMataKuliah) : String
  foreign_key(nipDosen) : String
  column(semester) : Int
  column(jadwal) : String
  column(waktu) : String
  column(sks) : Int
}

table(Presensi) {
  primary_key(idPresensi) : Int
  --
  foreign_key(nim) : String
  foreign_key(idMataKuliah) : Int
  column(tanggalPertemuan) : DateTime
  column(waktuPresensi) : DateTime
  column(statusKehadiran) : String
}

table(Nilai) {
  primary_key(idNilai) : Int
  --
  foreign_key(nomorInduk) : String
  foreign_key(idMataKuliah) : Int
  column(nilaiTugas) : Decimal
  column(nilaiKuis) : Decimal
  column(nilaiAkhir) : Decimal
  column(semester) : Int
}

table(ModulAjar) {
  primary_key(idModulAjar) : Int
  --
  foreign_key(idMataKuliah) : Int
  column(judul) : String
  column(tipe_modul) : String
  column(deskripsi) : String
  column(url) : String
  column(fileUrl) : String
  column(ukuran) : String
  column(tanggal) : DateTime
  column(diunduh) : Int
  column(canDownload) : Boolean
}

table(ProgressMateri) {
  primary_key(idProgress) : Int
  --
  foreign_key(idModulAjar) : Int
  foreign_key(nim) : String
  column(status) : String
  column(tanggalAkses) : DateTime
}

table(ForumDiskusi) {
  primary_key(idForumDiskusi) : Int
  --
  foreign_key(idMataKuliah) : Int
  column(judul) : String
  column(isiForum) : String
  column(lampiran) : String
  column(createdAt) : DateTime
  foreign_key(nomorInduk) : String
}

table(KomentarForum) {
  primary_key(idKomentar) : Int
  --
  foreign_key(nomorInduk) : String
  foreign_key(idForum) : Int
  column(isiKomentar) : String
  column(createdAt) : DateTime
}

table(LikeForum) {
  primary_key(idLike) : Int
  --
  foreign_key(nomorInduk) : String
  foreign_key(idForum) : Int
}

table(Kelompok) {
  primary_key(idKelompok) : Int
  --
  foreign_key(idMataKuliah) : Int
  column(namaKelompok) : String
  column(warna) : String
  column(tugasName) : String
  column(progress) : Int
  column(status) : String
  column(submitted) : Boolean
}

table(AnggotaKelompok) {
  primary_key(idAnggota) : Int
  --
  foreign_key(idKelompok) : Int
  foreign_key(nim) : String
  column(nilaiTugas) : Decimal
}

table(Tugas) {
  primary_key(idTugas) : Int
  --
  foreign_key(idMataKuliah) : Int
  foreign_key(nim) : String
  column(judul) : String
  column(tipeTugas) : String
  column(detailTugas) : String
  column(deadlineTugas) : DateTime
  column(fileJawaban) : String
  column(fileTugas) : String
  column(namaFileTugas) : String
  column(tipeFileTugas) : String
  column(ukuranFile) : String
}

table(ProgressTugas) {
  primary_key(idTugas) : Int
  --
  foreign_key(idMataKuliah) : Int
  foreign_key(nim) : String
  column(judul) : String
  column(detailTugas) : String
  column(deadlineTugas) : DateTime
  column(fileJawaban) : String
}

table(PengumpulanTugas) {
  primary_key(idPengumpulan) : Int
  --
  foreign_key(idKelompok) : Int
  foreign_key(idTugas) : Int
  foreign_key(nim) : String
  column(judul) : String
  column(detailTugas) : String
  column(deadlineTugas) : DateTime
  column(fileJawaban) : String
}

table(Kuis) {
  primary_key(idKuis) : Int
  --
  foreign_key(idMataKuliah) : Int
  column(judul) : String
  column(deadlineKuis) : DateTime
  column(skor) : Int
}

table(Soal) {
  primary_key(idSoal) : Int
  --
  foreign_key(idKuis) : Int
  column(pertanyaan) : String
  column(kunciJawaban) : String
  column(skor) : Int
}

table(PilihanJawaban) {
  primary_key(idPilihan) : Int
  --
  foreign_key(idSoal) : Int
  column(teksJawaban) : String
}

table(JawabanKuis) {
  primary_key(idJawabanKuis) : Int
  --
  foreign_key(idKuis) : Int
  foreign_key(nim) : String
  column(skor) : Int
  column(jawaban) : String
  column(tanggalKerja) : DateTime
}

table(Notifikasi) {
  primary_key(idNotifikasi) : Int
  --
  foreign_key(nim) : String
  column(judul) : String
  column(pesan) : String
  column(tipe) : String
  column(isRead) : Boolean
  column(createdAt) : DateTime
  column(idRef) : Int
  column(tipeRef) : String
}

' Relasi
Role ||--o{ User
User ||--o| Mahasiswa
User ||--o| Dosen
Dosen ||--o{ MataKuliah
MataKuliah ||--o{ Nilai
User ||--o{ Nilai
MataKuliah ||--o{ Kuis
Kuis ||--o{ Soal
Soal ||--o{ PilihanJawaban
Kuis ||--o{ JawabanKuis
Mahasiswa ||--o{ JawabanKuis
MataKuliah ||--o{ ForumDiskusi
User ||--o{ ForumDiskusi
ForumDiskusi ||--o{ KomentarForum
User ||--o{ KomentarForum
ForumDiskusi ||--o{ LikeForum
User ||--o{ LikeForum
MataKuliah ||--o{ ModulAjar
ModulAjar ||--o{ ProgressMateri
Mahasiswa ||--o{ ProgressMateri
MataKuliah ||--o{ Kelompok
Kelompok ||--o{ AnggotaKelompok
Mahasiswa ||--o{ AnggotaKelompok
MataKuliah ||--o{ Tugas
Mahasiswa ||--o{ Tugas
Kelompok ||--o{ PengumpulanTugas
Tugas ||--o{ PengumpulanTugas
Mahasiswa ||--o{ PengumpulanTugas
MataKuliah ||--o{ ProgressTugas
Mahasiswa ||--o{ ProgressTugas
MataKuliah ||--o{ Presensi
Mahasiswa ||--o{ Presensi
Mahasiswa ||--o{ Notifikasi

@enduml
